[package]
name = "vecmerge-impl"
version = "0.0.3"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
license = "MIT"
edition = "2018"
description = "A macro for merging vectors"
readme = "../README.md"
repository = "https://github.com/segeljakt/vecmerge"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", features = ["full"] }
proc-quote = "0.2.2"
proc-macro2 = "1.0.6"
proc-macro-hack = "0.5"
